--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsup",
     "dev": "tsx src/main.ts",
     "format": "prettier --write .",
-    "format:check": "prettier --check ."
+    "format:check": "prettier --check .",
+    "types": "tsc"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@titanom/prettier-config": "^1.0.3",
+    "@titanom/tsconfig": "^0.2.0",
     "@types/node": "^20.8.2",
     "prettier": "^3.0.3",
     "ts-node": "^10.9.1",
