--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   check:
-    name: Build, Format, Types
+    name: Format, Types
     runs-on: ubuntu-latest
     steps:
       - uses: titanom/github-composite-actions/turbo/setup@v1.0.12
@@ -21,6 +21,3 @@ jobs:
 
       - name: Check Types
         run: pnpm types
-
-      - name: Build
-        run: pnpm build
