--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,5 +21,5 @@ jobs:
       - name: Commit and push if changes
         run: |
           git diff --exit-code || git add -A
-          git diff --cached --exit-code || git commit -m "build(dist): compile source"
+          git diff --cached --exit-code || git add -f dist/ && git commit -m "build(dist): compile source"
           git push
