--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,7 @@ jobs:
         run: |
           git config user.name "GitHub Actions Bot"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git diff --exit-code || git add -A
-          git diff --cached --exit-code || git add -f dist/ && git commit -m "build(dist): compile source"
+          git add -f dist/
+          git commit -m "build(dist): compile action" || echo "No changes to commit"
           git push
+
