--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bwenv-setup",
   "version": "1.0.0",
-  "description": "",
+  "description": "GitHub Action for setting up bwenv",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -11,18 +11,22 @@
     "format:check": "prettier --check .",
     "types": "tsc"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Jannis Morgenstern <jannis.n.morgenstern@gmail.com> (https://github.com/Jannis-Morgenstern)",
+  "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.10.1",
     "@actions/http-client": "^2.1.1",
-    "@actions/tool-cache": "^2.0.1"
+    "@actions/tool-cache": "^2.0.1",
+    "semver": "^7.6.0",
+    "toml": "^3.0.0",
+    "yaml": "^2.4.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@titanom/prettier-config": "^1.0.3",
     "@titanom/tsconfig": "^0.2.0",
     "@types/node": "^20.8.2",
+    "@types/semver": "^7.5.8",
     "prettier": "^3.0.3",
     "ts-node": "^10.9.1",
     "tsup": "^7.2.0",
